--- a/config_lidar/nuscenes/det/transfusion/secfpn/lidar/default.yaml
+++ b/config_lidar/nuscenes/det/transfusion/secfpn/lidar/default.yaml
@@ -3,9 +3,10 @@ model:
     camera: null
 
 voxel_size: [0.075, 0.075, 0.2]
+sparse_shape: [1440, 1440, 41]
 point_cloud_range: [-54.0, -54.0, -5.0, 54.0, 54.0, 3.0]
 gt_paste_stop_epoch: 15
-batch_szie: 4
+batch_size: 4
 
 model:
   encoders:
@@ -18,7 +19,7 @@ model:
       backbone:
         type: SparseEncoder
         in_channels: 5
-        sparse_shape: [1440, 1440, 41]
+        sparse_shape: ${sparse_shape}
         output_channels: 128
         order:
           - conv
@@ -38,6 +39,6 @@ model:
   heads:
     object:
       train_cfg:
-        grid_size: [1440, 1440, 41]
+        grid_size: ${sparse_shape}
       test_cfg:
-        grid_size: [1440, 1440, 41]
+        grid_size: ${sparse_shape}
