--- a/config_fuse/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/transmvp_c_sem.yaml
+++ b/config_fuse/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/transmvp_c_sem.yaml
@@ -11,6 +11,18 @@ max_epochs: 6
 with_mask: true
 # transform_input: 266
 
+augment2d:
+  resize: [[0.48, 0.48], [0.48, 0.48]]
+  rotate: [0, 0]
+  gridmask:
+    prob: 0.0
+    fixed_prob: true
+
+augment3d:
+  scale: [1.0, 1.0]
+  rotate: [0, 0]
+  translate: 0.0
+
 
 # MVP related
 dbinfos_file: nuscenes_dbinfos_virtual.pkl
@@ -31,6 +43,6 @@ model:
         type: SparseEncoder
         in_channels: ${use_dim}
   fuser:
-    type: AddFuser
+    type: ConvFuser
     in_channels: [80, 256]
     out_channels: 256
