--- a/config_lidar/nuscenes/det/transfusion/secfpn/lidar/voxelnet_0p075_bevfusion.yaml
+++ b/config_lidar/nuscenes/det/transfusion/secfpn/lidar/voxelnet_0p075_bevfusion.yaml
@@ -2,5 +2,5 @@ dbinfos_file: nuscenes_dbinfos_train.pkl
 train_pkl: nuscenes_infos_train.pkl
 val_pkl: nuscenes_infos_val.pkl
 
-gt_paste_stop_epoch: 15
-batch_szie: 4
+gt_paste_stop_epoch: -1
+batch_size: 4
