--- a/configs/nuscenes/det/centerhead/lssfpn/camera/256x704/swint/default.yaml
+++ b/configs/nuscenes/det/centerhead/lssfpn/camera/256x704/swint/default.yaml
@@ -19,7 +19,7 @@ model:
         convert_weights: true
         init_cfg:
           type: Pretrained
-          checkpoint: https://github.com/SwinTransformer/storage/releases/download/v1.0.0/swin_tiny_patch4_window7_224.pth
+          checkpoint: pretrained/swin_tiny_patch4_window7_224.pth
       neck:
         type: GeneralizedLSSFPN
         in_channels: [192, 384, 768]
@@ -59,3 +59,28 @@ model:
       out_channels: 256
       scale_factor: 2
 
+optimizer:
+  lr: 0.0001
+  paramwise_cfg:
+    custom_keys:
+      absolute_pos_embed:
+        decay_mult: 0
+      relative_position_bias_table:
+        decay_mult: 0
+      encoders.camera.backbone:
+        lr_mult: 0.1
+
+
+lr_config:
+  policy: cyclic
+  target_ratio: 5.0
+  cyclic_times: 1
+  step_ratio_up: 0.4
+
+momentum_config:
+  policy: cyclic
+  cyclic_times: 1
+  step_ratio_up: 0.4
+
+data:
+  samples_per_gpu: 4
